@@ -369,3 +369,6 @@
 [2022-06-02]
 - Added Fel Reaver Part to the loot table of Gan'arg Engineer for the quest One Demon's Trash...
 - Updated the flags of Fel Reaver Part to allow every member of a group to loot it.
+- Added Ivory Bell to the loot table of Ripfang Lynx for the quest New Opportunities.
+- Added Ivory Bell to the loot table of Barbscale Crocolisk for the quest New Opportunities.
+- Updated the flags of Ivory Bell to allow every member of a group to loot it.
